Revamp contacts section to focus on recruitment information. Update layout and styling to reflect new "Recruit" tab, including links for lab resources, application forms, and contact details for prospective students. Adjust CSS classes for consistency and improved user experience.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
                 <button class="tab-button" data-tab="publications">Publications</button>
                 <button class="tab-button" data-tab="projects">Projects</button>
                 <button class="tab-button" data-tab="photos">Photos</button>
-                <button class="tab-button" data-tab="contacts">Contacts</button>
+                <button class="tab-button" data-tab="recruit">Recruit</button>
             </nav>
             <button class="menu-toggle" aria-label="Toggle menu">
                 <img src="{{ '/assets/images/icons/menu_icon.svg' | relative_url }}" alt="Menu" class="menu-icon">
@@ -51,7 +51,7 @@
             <li><button class="side-menu-tab" data-tab="publications">Publications</button></li>
             <li><button class="side-menu-tab" data-tab="projects">Projects</button></li>
             <li><button class="side-menu-tab" data-tab="photos">Photos</button></li>
-            <li><button class="side-menu-tab" data-tab="contacts">Contacts</button></li>
+            <li><button class="side-menu-tab" data-tab="recruit">Recruit</button></li>
         </ul>
     </nav>
 
